[package]
name = "openapi-fuzzer"
version = "0.1.0"
authors = ["Matus Ferech <matus.ferech@gmail.com>"]
edition = "2018"
default-run = "openapi-fuzzer"

[dependencies]
argh = "0.1.4"
url = {version = "2.2.0", features = ["serde"]}
anyhow = "1.0.37"
openapiv3 = "0.3.2"
serde = "1.0"
serde_yaml = "0.8"
ureq = {version = "2.1.0", features = ["json"]}
openapi_utils = "0.2.1"
arbitrary = "1"
rand = "0.8.0"
serde_json = "1.0"
tui = {version = "0.14", default-features = false, features = ["crossterm"]}
crossterm = "0.19"

[[bin]]
name = "openapi-fuzzer-resender"
path = "src/bin/resender.rs"
