[package]
name = "openapi-fuzzer"
version = "0.1.3"
authors = ["Matus Ferech <matus.ferech@gmail.com>"]
description = "Black-box fuzzer that fuzzes APIs based on OpenAPI specification "
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/matusf/openapi-fuzzer"
readme = "README.md"
default-run = "openapi-fuzzer"

[dependencies]
argh = "0.1.4"
url = {version = "2.2.0", features = ["serde"]}
anyhow = "1.0.37"
openapiv3 = "0.5.0"
serde = "1.0"
serde_yaml = "0.8"
ureq = {version = "2.1.0", features = ["json", "native-certs"]}
openapi_utils = "0.2.2"
arbitrary = "1"
rand = "0.8.0"
serde_json = "1.0"
tui = {version = "0.14", default-features = false, features = ["crossterm"]}
crossterm = "0.19"
proptest = "1.0.0"
indexmap = "1.9.1"

[dev-dependencies]

[[bin]]
name = "openapi-fuzzer-resender"
path = "src/bin/resender.rs"
