[package]
name = "openapi-fuzzer"
version = "0.1.3"
authors = ["Matus Ferech <matus.ferech@gmail.com>"]
description = "Black-box fuzzer that fuzzes APIs based on OpenAPI specification "
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/matusf/openapi-fuzzer"
readme = "README.md"
default-run = "openapi-fuzzer"

[dependencies]
argh = "0.1.4"
url = {version = "2.2.0", features = ["serde"]}
anyhow = "1.0.37"
openapiv3 = "0.5.0"
serde = "1.0"
serde_yaml = "0.8"
ureq = {version = "2.1.0", features = ["json", "native-certs"]}
openapi_utils = "0.2.2"
arbitrary = "1"
serde_json = "1.0"
proptest = "1.1.0"
indexmap = "1.9.1"

[dev-dependencies]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.1.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
